修复404错误：更新路由配置

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,18 +8,14 @@
     ],
     "routes": [
         {
-            "src": "/api/calculate_bazi",
-            "dest": "app.py",
-            "methods": ["POST"]
-        },
-        {
-            "src": "/health",
-            "dest": "app.py",
-            "methods": ["GET"]
-        },
-        {
             "src": "/(.*)",
-            "dest": "app.py"
+            "dest": "app.py",
+            "methods": ["GET", "POST", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Headers": "Content-Type",
+                "Access-Control-Allow-Methods": "GET,POST,OPTIONS"
+            }
         }
     ]
 } 
